# the_grid

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
docs/diagrams/: flow.puml
scripts/: build_prod  run_dev  run_prod
src/: env.rs  error.rs  logger.rs  main.rs  time.rs  ws.rs
src/adapters/: binance.rs
src/engine/: mod.rs
src/history/: mod.rs
src/indicators/: indicator.rs  main.rs  mod.rs  rsi.rs  volatility.rs
src/klinestore/: mod.rs
src/message_bus/: engine_bus.rs  history_bus.rs  mod.rs  ui_bus.rs  ws_bus.rs
src/tui/: app.rs  data.rs  input.rs  layout.rs  mod.rs  run.rs  settings.rs  types.rs  util.rs
src/tui/render/: dashboard.rs  intro.rs  layout.rs  mod.rs  settings.rs
src/types/: config.rs  mod.rs  ring_buffer.rs  timeframe.rs
src/ui/: app.rs  data.rs  mod.rs  settings.rs  ui.rs
